[build-system]
requires = ["flit_core >=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyopenms_viz"
authors = [
    {name = "OpenMS Team", email = "webmaster@openms.de"},
]
version = "1.0.1"
description = "A package for visualizing mass spectrometry data using pandas dataframes"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10, <3.13"
dependencies = ["pandas>=0.17"]

[project.urls]
Homepage = "https://github.com/OpenMS/pyopenms_viz/"

[project.optional-dependencies]
testing = ["pytest", "syrupy"]
all = ["bokeh>=3.4.1", "plotly", "matplotlib"]
bokeh = ["bokeh>=3.4.1"]
matplotlib = ["matplotlib"]
plotly = ["plotly"]
docs = ["sphinx", "sphinx-gallery", "sphinx-copybutton", "pydata_sphinx_theme", "nbsphinx", "rdkit", "cairosvg", "pymzml", "ipython", "ipykernel", "docstring_parser"]

[project.entry-points.pandas_plotting_backends]
ms_bokeh = "pyopenms_viz._bokeh"
ms_plotly = "pyopenms_viz._plotly"
ms_matplotlib = "pyopenms_viz._matplotlib"

[tool.flit.sdist]
exclude = ["tests*"]
